date formatting, completion status, minor styling, bugFix: split creation even if user not selected resolved, pay button visibility according to the user

--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -189,3 +189,30 @@ input[type='submit'] {
 input[type='submit']:hover {
     background-color: #0056b3;
 }
+
+.login-header {
+    text-align: center;
+    padding: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: grey;
+    letter-spacing: 10px;
+}
+
+.login-sub-header{
+    text-align: center;
+    padding-bottom: 40px;
+    font-size: 14px;
+    font-weight: normal;
+    color: grey;
+    letter-spacing: 10px;
+}
+
+.flash {
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: red !important;
+    font-size: small;
+}
+
